<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eniacs_team.rutamurcielago.HomeActivity"
    tools:showIn="@layout/activity_scrolling">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intro_text1"
            android:background="#00000000"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/parragraph_margin"
            android:text="@string/intro_text1"
            android:textSize="@dimen/intro_text_size"
            android:textColor="@color/negro"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/parragraph_margin"
            android:layout_marginBottom="@dimen/parragraph_margin"
            android:src="@drawable/mapa_regional_tectonico"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intro_text2"
            android:background="#00000000"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/parragraph_margin"
            android:layout_marginBottom="@dimen/parragraph_margin"
            android:text="@string/intro_text2"
            android:textSize="@dimen/intro_text_size"
            android:textColor="@color/negro"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/parragraph_margin"
            android:layout_marginBottom="@dimen/parragraph_margin"
            android:src="@drawable/mapa_regional_tectonico_flecha"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intro_text3"
            android:background="#00000000"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/parragraph_margin"
            android:layout_marginBottom="@dimen/parragraph_margin"
            android:text="@string/intro_text3"
            android:textSize="@dimen/intro_text_size"
            android:textColor="@color/negro"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intro_text4"
            android:background="#00000000"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/parragraph_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/intro_text4"
            android:textSize="@dimen/intro_text_size"
            android:textColor="@color/negro"/>
        <Button
            android:id="@+id/continue_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:background="@color/colorPrimary"
            android:text="@string/home_button_text"
            android:layout_gravity="center"
            android:layout_margin="@dimen/text_margin"
            android:padding="4dp"
            android:textSize="@dimen/button_text_size"
            android:elevation="5dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
